# one-dim-ca

./: Cargo.toml  README.md
src/: cell.rs  generator.rs  graph.rs  lib.rs  main.rs  rule.rs  world.rs
