[package]
name = "one-dim-ca"
version = "0.3.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["graph"]
graph = ["plotters"]

[dependencies]
indicatif = "0.17.8"
plotters = { version = "0.3.5", optional = true }
rand = "0.8.5"
rayon = "1.10.0"
